Fix layout of pricing tiers on mobile

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -8,6 +8,8 @@ h1
     +hide-text
     color: red
 
+
+
 .pricingTiers 
     h2
         text-align: center
@@ -19,6 +21,8 @@ h1
         list-style-type: none
         margin: 0 $base-line-height / 4
         padding: 0
+        +breakpoint('medium')
+            flex-flow: row nowrap
 
         > li
             display: flex
@@ -27,15 +31,14 @@ h1
             background-color: fade-out($highlight-color, 0.5)
             margin: $base-line-height / 4
             padding: $base-line-height / 2
-            min-width: $base-line-height * 4
-            max-width: $base-line-height * 7
-            flex: 1 1 auto
+            max-width: $base-line-height * 10
+            flex: auto
 
             > h3
                 text-align: center;
                 display: block
                 height: $base-line-height * 2
-                background: center center / auto $base-line-height * 2 no-repeat
+                background: center center / contain no-repeat
                 +background-replacement
 
             > .copy
@@ -56,8 +59,6 @@ h1
                 background-image: url('../images/ATL_Logo.png')
             &#torontoAF > h3
                 background-image: url('../images/Toronto AF_Logo.png')
-            
-
 
     > header, > footer
         margin: $base-line-height / 2
